# hacs-octopus-tracker-predict

./: CLAUDE.md  Project.md  README.md  calibration_history.json  hacs.json  pyproject.toml  rank-accuracy-notes.md  tracker-predict-spec.md
.github/workflows/: ci.yml  recalibrate.yml
custom_components/tracker_predict/: __init__.py  binary_sensor.py  calendar.py  calibration.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/tracker_predict/translations/: en.json
scripts/: backfill_rank_metrics.py  drift_diagnostic.py  recalibrate.py
tests/: conftest.py  test_calendar.py  test_calibration.py  test_coordinator.py  test_live_api.py  test_persistence.py
