[project]
name = "hacs-octopus-tracker-predict"
version = "0.1.0"
description = "HACS integration to predict Octopus Tracker electricity rates"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "live_api: tests that call real external APIs (may be slow/flaky)",
]
